--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
               aria-current="page"
               class="navigation-item w-nav-link w--current"
               >About</a
-            ><a href="#" class="navigation-item w-nav-link">SERVICES</a>
+            ><a href="/services" class="navigation-item w-nav-link">SERVICES</a>
           </nav>
           <div class="menu-button w-nav-button">
             <img
