--- a/home.html
+++ b/home.html
@@ -101,7 +101,7 @@
         <div class="menu">
           <nav role="navigation" class="navigation-items w-nav-menu">
             <a href="/about" class="navigation-item w-nav-link">About</a
-            ><a href="#" class="navigation-item w-nav-link">SERVICES</a>
+            ><a href="/services" class="navigation-item w-nav-link">SERVICES</a>
           </nav>
           <div class="menu-button w-nav-button">
             <img
